# bevy_reflect_benchmark

./: .gitignore  Cargo.toml
benches/: reflect_new.rs
new_reflect/: Cargo.toml
new_reflect/src/: big_boi.rs  medium_boi.rs  small_boi.rs
old_reflect/: Cargo.toml
old_reflect/src/: lib.rs
src/: lib.rs
